# MinecraftMacros

./: Cargo.toml  README.md
src/: bot_fishing.rs  craft.rs  left_click.rs  main.rs  race_achievement.rs  right_click.rs  temp_race.rs
